added bottom section

--- a/home.css
+++ b/home.css
@@ -45,3 +45,10 @@
 	font-size:36px;
 	text-align: center
 }
+
+.bottomsection {
+	height:75px;
+	background-color:#708090;
+	font-size:36px;
+	text-align: center
+}
