--- a/home.css
+++ b/home.css
@@ -1,6 +1,6 @@
-@media (min-width: 768px) and (max-width: 991px) {
-    .middleDiv {
-       float: right;
+@media (min-width: 800px) and (max-width: 375px) {
+    .test {
+       min-height: 400px;
     }
 }
 
