--- a/home.css
+++ b/home.css
@@ -1,16 +1,24 @@
-@media (min-width: 800px) and (max-width: 375px) {
-    .test {
-       min-height: 400px;
-    }
+#page {
+    overflow: hidden;
+}
+
+.topsection{
+	margin-top: 30px;
+}
+.topsectioninfo{
+	background-color:#DCDCDC;
+}
+
+.center {
+    margin: auto;
+    width: 50%;
 }
 
 .parallax {
     /* The image used */
     background-image: url("https://images.unsplash.com/photo-1449034446853-66c86144b0ad?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=7402cc297bdfbb4a4856e764971dc013&auto=format&fit=crop&w=1350&q=80");
-
     /* Set a specific height */
-    min-height: 800px;
-	min-width: 100px;
+    min-height: 573px;
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
@@ -18,37 +26,67 @@
     background-size: cover;
 }
 
-.midsection {
-	height:800px;
+.aboutmeblock {
+	height:480px;
 	background-color:#DCDCDC;
-	font-size:36px;
-	text-align: center
+	font-size:25px;
+	text-align: center;
+	white-space: nowrap;
 }
+.aboutmeblockinfo{
 
-.undermidsection {
+}
+.edublock {
 	height:480px;
 	background-color:#FFFFFF;
 	font-size:36px;
-	text-align: center
+	text-align: center;
 }
 
-.undermidsection2 {
+.awardclubblock {
 	height:480px;
 	background-color:#DCDCDC;
 	font-size:36px;
-	text-align: center
+	text-align: center;
 }
 
-.undermidsection3 {
+.miscblock {
 	height:480px;
 	background-color:#FFFFFF;
 	font-size:36px;
-	text-align: center
+	text-align: center;
 }
 
 .bottomsection {
 	height:75px;
 	background-color:#708090;
 	font-size:36px;
-	text-align: center
+	text-align: center;
+}
+
+
+.aboutmeblockleft::before {
+	top: 0;
+    bottom: 0;
+	content: '';
+    left: -999em;
+    background: #DCDCDC;
+	width: 999em;
+	position: absolute;
+}
+
+#body-text {
+  top: 0;
+  position: absolute;
+  bottom: 0;
+  left: 10%;
+  right: 10%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center
+}
+
+.descriptionFont1{
+	font-family: 'Rokkitt', serif;
 }
