--- a/home.css
+++ b/home.css
@@ -2,13 +2,16 @@
     overflow: hidden;
 }
 /*iPhoneX start*/
+@media all and (max-width: 375px){
+  .mobileNoParallax{
+    display:block !important;
+    width: 375px;
+    height: 300px;
+  }
+}
 @media (max-width: 375px){
-	div[class*="parallax"] {
-		background-image: url("https://i.imgur.com/tsr3rpC.jpg");
-		background-attachment: fixed;
-	    background-position: center;
-	    background-repeat: no-repeat;
-		min-height: 100px;
+  div[class*="parallax"] {
+		display:none;
 	}
 	div[class*="paraRow"] {
 		height: 26rem;
@@ -33,19 +36,28 @@
 		font-size: 1.2rem;
 	}
 	div[class*="aboutmeblock"] {
-		height: 12rem;
+		height: 10rem;
 	}
 	div[class*="edublock"] {
-		height: 28.5rem;
+		height: 26.5rem;
 	}
 	div[class*="educationClasses"] {
 		font-size: .8rem;
 	}
 	div[class*="skillblock"] {
-		height: 14.5rem;
+		height: 14rem;
 	}
 	div[class*="awardclubblock"] {
-		height: 20.5rem;
+		height: 19.5rem;
+	}
+    div[class*="contactblock"] {
+		height: 3.5rem;
+	}
+    i[class*="fa-copyright"] {
+		font-size:.5em;
+        float: left;
+        margin-top: 20px;
+        margin-left: 10px;
 	}
 }
 /*iPhoneX end*/
@@ -71,6 +83,15 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.meblock{
+  height: 13.8rem;
+	background-color:#FFFFFF;
+	font-size:25px;
+	text-align: center;
+	white-space: nowrap;
+  margin-top: 15px;
 }
 
 .aboutmeblock {
@@ -103,7 +124,7 @@
 	text-align: center;
 }
 
-.bottomsection {
+.contactblock {
 	height:75px;
 	background-color:#708090;
 	font-size:36px;
@@ -144,4 +165,9 @@ hr {
 
 .skillmargin{
 	margin-bottom: 10px
+}
+
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
 }
