--- a/home.css
+++ b/home.css
@@ -2,7 +2,7 @@
     overflow: hidden;
 }
 /*iPhoneX start*/
-@media (min-width: 375px) and (min-height: 812px) and (max-width: 376px) and (max-height: 813px) {
+@media (min-width: 375px) and (min-height: 635px) and (max-width: 376px) and (max-height: 636px) {
     .mobileNoParallax{
       display:block !important;
       width: 375px;
@@ -56,18 +56,22 @@
 	}
 	div[class*="aboutmeblock"] {
 		height: 13rem;
+        background-color: #FFF;
 	}
 	div[class*="edublock"] {
 		height: 31rem;
+        background-color: #DCDCDC;
 	}
 	div[class*="educationClasses"] {
 		font-size: .8rem;
 	}
 	div[class*="skillblock"] {
 		height: 14rem;
+        background-color: #FFF;
 	}
 	div[class*="awardclubblock"] {
 		height: 18rem;
+        background-color: #DCDCDC;
 	}
     div[class*="contactblock"] {
 		height: 3.5rem;
@@ -79,9 +83,8 @@
         margin-left: 10px;
 	}
 }
-
-/*iPhone6/7/8 start*/
-@media (min-width: 375px) and (min-height: 667px) and (max-width: 376px) and (max-height: 668px) {
+/*iPhone6/7/8 start */
+@media (min-width: 375px) and (min-height: 553px) and (max-width: 376px) and (max-height: 554px) {
     .mobileNoParallax{
       display:block !important;
       width: 375px;
@@ -90,26 +93,8 @@
     .mobileMeSection{
         display:block !important;
     }
-    .img-thumbnail{
-        background-color: #FFF !important;
-        border: none;
-    }
-    div[class*="paraRow"] {
-        display:none !important;
-	}
     div[class*="meinfoblock"] {
-        display:none !important;
-	}
-    div[class*="edublock"] {
-        background-color: #FFF !important;
-        height: 43rem !important;
-	}
-    div[class*="skillblock"] {
-        background-color: #DCDCDC !important;
-	}
-    div[class*="awardclubblock"] {
-        background-color: #FFF !important;
-        height: 40rem !important;
+        display:none;
 	}
     div[class*="mobileheaderDescSize"] {
         font-size: 25px !important;
@@ -117,37 +102,207 @@
     div[class*="mobileheaderNameSize"] {
         font-size: 35px !important;
 	}
+    div[class*="mobileMeSection"] {
+        background-color: #DCDCDC;
+	}
+    div[class*="mesectionname"] {
+        font-size: 150px;
+	}
+    div[class*="mesectioninfo"] {
+		font-size: 100px;
+	}
+    div[class*="parallax"] {
+		display:none;
+	}
+	div[class*="paraRow"] {
+		height: 26rem;
+	}
+	div[class*="headerNameSize"] {
+		font-size: 1.5rem;
+		text-align: center;
+	}
+	div[class*="headerDescSize"] {
+		text-align: center;
+		font-size: .9rem;
+	}
+	div[class*="infoHeaderSize"] {
+		font-size: 1.5rem;
+		margin-top: 8px;
+	}
+	div[class*="infoDescSize"] {
+		font-size: 1rem;
+		white-space:normal;
+	}
+	div[class*="educationHeaders"] {
+		font-size: 1.2rem;
+	}
+	div[class*="aboutmeblock"] {
+		height: 13rem;
+        background-color: #FFF;
+	}
+	div[class*="edublock"] {
+		height: 31rem;
+        background-color: #DCDCDC;
+	}
+	div[class*="educationClasses"] {
+		font-size: .8rem;
+	}
+	div[class*="skillblock"] {
+		height: 14rem;
+        background-color: #FFF;
+	}
+	div[class*="awardclubblock"] {
+		height: 18rem;
+        background-color: #DCDCDC;
+	}
+    div[class*="contactblock"] {
+		height: 3.5rem;
+	}
+    i[class*="fa-copyright"] {
+		font-size:.5em;
+        float: left;
+        margin-top: 20px;
+        margin-left: 10px;
+    }
+}
+/*iPhone6/7/8 end */
+/*iPhone6/7/8PLUS start */
+@media only screen and (min-width: 414px) and (min-height: 622px) and (max-width: 415px) and (max-height: 623px) {
+    .mobileNoParallax{
+      display:block !important;
+      width: 414px;
+      height: 300px;
+    }
+    .img-thumbnail{
+        background-color: #FFF !important;
+        border:none;
+    }
+    .mobileMeSection{
+        display:block !important;
+    }
+    div[class*="meinfoblock"] {
+        display:none;
+    }
+    div[class*="parallax"] {
+		display:none !important;
+	}
+    div[class*="infoDescSize"] {
+		font-size: 1rem;
+		white-space:normal;
+	}
     div[class*="aboutmeblock"] {
         height: 18rem;
-        word-wrap: break-word !important;
-        white-space:normal !important;
     }
     div[class*="edublock"] {
-        height: 30rem;
+        height: 42rem;
     }
     div[class*="awardclubblock"] {
         height: 25rem !important;
     }
     div[class*="contactblock"] {
-        font-size: 30px;
+        font-size: 20px;
         height: 3rem !important;
     }
     div[class*="infoDescSize"] {
         font-size: 25px;
     }
-
 }
-/*iPhone6/7/8 start*/
-
-/*MBP13inch start*/
-@media (min-width: 1199px) and (min-height: 590px) and (min-width: 1200px) and (min-height: 591px){
+/*iPhone6/7/8PLUS end */
+/*iPhoneSE start */
+@media only screen and (min-width: 320px) and (min-height: 454px) and (max-width: 321px) and (max-height: 455px) {
+    .mobileNoParallax{
+      display:block !important;
+      width: 414px;
+      height: 300px;
+    }
+    .img-thumbnail{
+        background-color: #FFF !important;
+        border:none;
+    }
+    .mobileMeSection{
+        display:block !important;
+    }
+    div[class*="mobilepfinfo"]{
+        margin-right: 95px;
+    }
     div[class*="meinfoblock"] {
-        height: 40rem;
-        word-wrap: break-word !important;
-        white-space:normal !important;
+        display:none;
+    }
+    div[class*="parallax"] {
+		display:none !important;
+	}
+    div[class*="infoDescSize"] {
+		font-size: 1rem;
+		white-space:normal;
+	}
+    div[class*="aboutmeblock"] {
+        height: 15rem;
+    }
+    div[class*="edublock"] {
+        height: 46.5rem;
+    }
+    div[class*="awardclubblock"] {
+        height: 23rem !important;
+    }
+    div[class*="contactblock"] {
+        font-size: 20px;
+        height: 3rem !important;
+    }
+    div[class*="infoDescSize"] {
+        font-size: 20px;
     }
 }
-/*MBP13inch end*/
+/*iPhoneSE end */
+/*MBP 13in start */
+@media (min-width: 1199px) and (min-height: 635px) and (max-width: 1200px) and (max-height: 636px) {
+    div[class*="meinfoblock"] {
+		font-size: 1.3rem;
+		white-space:normal !important;
+        word-wrap: break-word !important;
+	}
+    div[class*="aboutmeblock"] {
+        height: 12rem;
+    }
+    div[class*="edublock"] {
+        height: 37.5rem;
+    }
+    div[class*="awardclubblock"] {
+        height: 20rem !important;
+    }
+    div[class*="contactblock"] {
+        font-size: 20px;
+        height: 3rem !important;
+    }
+    div[class*="infoDescSize"] {
+        font-size: 20px;
+    }
+}
+
+@media (min-width: 400px) and (min-height: 635px) and (max-width: 768px) and (max-height: 636px) {
+    div[class*="meinfoblock"] {
+		font-size: 1.3rem;
+		white-space:normal !important;
+        word-wrap: break-word !important;
+	}
+    div[class*="aboutmeblock"] {
+        height: 12rem;
+    }
+    div[class*="edublock"] {
+        height: 40.5rem;
+    }
+    div[class*="awardclubblock"] {
+        height: 21rem !important;
+    }
+    div[class*="contactblock"] {
+        font-size: 20px;
+        height: 3rem !important;
+    }
+    div[class*="infoDescSize"] {
+        font-size: 20px;
+    }
+}
+/*MBP 13in end */
+
 /*Section CSS start*/
 
 .topsection{
