--- a/home.css
+++ b/home.css
@@ -1,576 +1,7 @@
 #page {
     overflow: hidden;
 }
-/*iPhoneX start*/
-@media (min-width: 375px) and (min-height: 635px) and (max-width: 376px) and (max-height: 636px) {
-    .mobileNoParallax{
-      display:block !important;
-      width: 375px;
-      height: 300px;
-    }
-    .mobileMeSection{
-        display:block !important;
-    }
-    div[class*="meinfoblock"] {
-        display:none;
-	}
-    div[class*="mobileheaderDescSize"] {
-        font-size: 25px !important;
-	}
-    div[class*="mobileheaderNameSize"] {
-        font-size: 35px !important;
-	}
-    div[class*="mobileMeSection"] {
-        background-color: #DCDCDC;
-	}
-    div[class*="mesectionname"] {
-        font-size: 150px;
-	}
-    div[class*="mesectioninfo"] {
-		font-size: 100px;
-	}
-    div[class*="parallax"] {
-		display:none;
-	}
-	div[class*="paraRow"] {
-		height: 26rem;
-	}
-	div[class*="headerNameSize"] {
-		font-size: 1.5rem;
-		text-align: center;
-	}
-	div[class*="headerDescSize"] {
-		text-align: center;
-		font-size: .9rem;
-	}
-	div[class*="infoHeaderSize"] {
-		font-size: 1.5rem;
-		margin-top: 8px;
-	}
-	div[class*="infoDescSize"] {
-		font-size: 1rem;
-		white-space:normal;
-	}
-	div[class*="educationHeaders"] {
-		font-size: 1.2rem;
-	}
-	div[class*="aboutmeblock"] {
-		height: 13rem;
-        background-color: #FFF;
-	}
-	div[class*="edublock"] {
-		height: 31rem;
-        background-color: #DCDCDC;
-	}
-	div[class*="educationClasses"] {
-		font-size: .8rem;
-	}
-	div[class*="skillblock"] {
-		height: 14rem;
-        background-color: #FFF;
-	}
-	div[class*="awardclubblock"] {
-		height: 18rem;
-        background-color: #DCDCDC;
-	}
-    div[class*="contactblock"] {
-		height: 3.5rem;
-	}
-    i[class*="fa-copyright"] {
-		font-size:.5em;
-        float: left;
-        margin-top: 20px;
-        margin-left: 10px;
-	}
-}
-/*iPhone6/7/8 start */
-@media (min-width: 375px) and (min-height: 553px) and (max-width: 376px) and (max-height: 554px) {
-    .mobileNoParallax{
-      display:block !important;
-      width: 375px;
-      height: 300px;
-    }
-    .mobileMeSection{
-        display:block !important;
-    }
-    div[class*="meinfoblock"] {
-        display:none;
-	}
-    div[class*="mobileheaderDescSize"] {
-        font-size: 25px !important;
-	}
-    div[class*="mobileheaderNameSize"] {
-        font-size: 35px !important;
-	}
-    div[class*="mobileMeSection"] {
-        background-color: #DCDCDC;
-	}
-    div[class*="mesectionname"] {
-        font-size: 150px;
-	}
-    div[class*="mesectioninfo"] {
-		font-size: 100px;
-	}
-    div[class*="parallax"] {
-		display:none;
-	}
-	div[class*="paraRow"] {
-		height: 26rem;
-	}
-	div[class*="headerNameSize"] {
-		font-size: 1.5rem;
-		text-align: center;
-	}
-	div[class*="headerDescSize"] {
-		text-align: center;
-		font-size: .9rem;
-	}
-	div[class*="infoHeaderSize"] {
-		font-size: 1.5rem;
-		margin-top: 8px;
-	}
-	div[class*="infoDescSize"] {
-		font-size: 1rem;
-		white-space:normal;
-	}
-	div[class*="educationHeaders"] {
-		font-size: 1.2rem;
-	}
-	div[class*="aboutmeblock"] {
-		height: 13rem;
-        background-color: #FFF;
-	}
-	div[class*="edublock"] {
-		height: 31rem;
-        background-color: #DCDCDC;
-	}
-	div[class*="educationClasses"] {
-		font-size: .8rem;
-	}
-	div[class*="skillblock"] {
-		height: 14rem;
-        background-color: #FFF;
-	}
-	div[class*="awardclubblock"] {
-		height: 18rem;
-        background-color: #DCDCDC;
-	}
-    div[class*="contactblock"] {
-		height: 3.5rem;
-	}
-    i[class*="fa-copyright"] {
-		font-size:.5em;
-        float: left;
-        margin-top: 20px;
-        margin-left: 10px;
-    }
-}
-/*iPhone6/7/8 end */
-/*iPhone6/7/8PLUS start */
-@media only screen and (min-width: 414px) and (min-height: 622px) and (max-width: 415px) and (max-height: 623px) {
-    .mobileNoParallax{
-      display:block !important;
-      width: 414px;
-      height: 300px;
-    }
-    .img-thumbnail{
-        background-color: #FFF !important;
-        border:none;
-    }
-    .mobileMeSection{
-        display:block !important;
-    }
-    div[class*="meinfoblock"] {
-        display:none;
-    }
-    div[class*="parallax"] {
-		display:none !important;
-	}
-    div[class*="infoDescSize"] {
-		font-size: 1rem;
-		white-space:normal;
-	}
-    div[class*="aboutmeblock"] {
-        height: 18rem;
-    }
-    div[class*="edublock"] {
-        height: 42rem;
-    }
-    div[class*="awardclubblock"] {
-        height: 25rem !important;
-    }
-    div[class*="contactblock"] {
-        font-size: 20px;
-        height: 3rem !important;
-    }
-    div[class*="infoDescSize"] {
-        font-size: 25px;
-    }
-}
-/*iPhone6/7/8PLUS end */
-/*iPhoneSE start */
-@media only screen and (min-width: 320px) and (min-height: 454px) and (max-width: 321px) and (max-height: 455px) {
-    .mobileNoParallax{
-      display:block !important;
-      width: 414px;
-      height: 300px;
-    }
-    .img-thumbnail{
-        background-color: #FFF !important;
-        border:none;
-    }
-    .mobileMeSection{
-        display:block !important;
-    }
-    div[class*="mobilepfinfo"]{
-        margin-right: 95px;
-    }
-    div[class*="meinfoblock"] {
-        display:none;
-    }
-    div[class*="parallax"] {
-		display:none !important;
-	}
-    div[class*="infoDescSize"] {
-		font-size: 1rem;
-		white-space:normal;
-	}
-    div[class*="aboutmeblock"] {
-        height: 15rem;
-    }
-    div[class*="edublock"] {
-        height: 46.5rem;
-    }
-    div[class*="awardclubblock"] {
-        height: 23rem !important;
-    }
-    div[class*="contactblock"] {
-        font-size: 20px;
-        height: 3rem !important;
-    }
-    div[class*="infoDescSize"] {
-        font-size: 20px;
-    }
-}
-/*iPhoneSE end */
-/*MBP 13in start */
-@media (min-width: 1199px) and (min-height: 635px) and (max-width: 1200px) and (max-height: 636px) {
-    div[class*="meinfoblock"] {
-		font-size: 1.3rem;
-		white-space:normal !important;
-        word-wrap: break-word !important;
-	}
-    div[class*="aboutmeblock"] {
-        height: 12rem;
-    }
-    div[class*="edublock"] {
-        height: 37.5rem;
-    }
-    div[class*="awardclubblock"] {
-        height: 20rem !important;
-    }
-    div[class*="contactblock"] {
-        font-size: 20px;
-        height: 3rem !important;
-    }
-    div[class*="infoDescSize"] {
-        font-size: 20px;
-    }
-}
-
-@media (min-width: 400px) and (min-height: 635px) and (max-width: 768px) and (max-height: 636px) {
-    div[class*="meinfoblock"] {
-		font-size: 1.3rem;
-		white-space:normal !important;
-        word-wrap: break-word !important;
-	}
-    div[class*="aboutmeblock"] {
-        height: 12rem;
-    }
-    div[class*="edublock"] {
-        height: 40.5rem;
-    }
-    div[class*="awardclubblock"] {
-        height: 21rem !important;
-    }
-    div[class*="contactblock"] {
-        font-size: 20px;
-        height: 3rem !important;
-    }
-    div[class*="infoDescSize"] {
-        font-size: 20px;
-    }
-}
-/*MBP 13in end */
-
-/*Section CSS start*/
-
-.topsection{
-	margin-top: 30px;
-}
-.topsectioninfo{
-	background-color:#DCDCDC;
-}
-
-.mesectionname{
-    margin-top: 50px;
-}
-
-/*Section CSS end*/
-
-.parallax {
-    /* The image used */
-    background-image: url("https://images.unsplash.com/photo-1449034446853-66c86144b0ad?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=7402cc297bdfbb4a4856e764971dc013&auto=format&fit=crop&w=1350&q=80");
-    /* Set a specific height */
-    /* Create the parallax scrolling effect */
-	background-size: cover;
-	background-position: center;
-	background-attachment: fixed;
-	min-height: 100vh;
-}
-
-/*Block CSS Start*/
-
-.meinfoblock{
-    height: 13.8rem;
-    font-size:55px;
-    text-align: center;
-    white-space: nowrap;
-}
-
-.aboutmeblock {
-	/*height:320px;*/
-	height: 200px;
-	background-color:#DCDCDC;
-	font-size:25px;
-	text-align: center;
-	white-space: nowrap;
-}
-
-.edublock {
-	height:565px;
-	background-color:#FFFFFF;
-	font-size:36px;
-	text-align: center;
-}
-
-.skillblock {
-	height:230px;
-	background-color:#DCDCDC;
-	font-size:36px;
-	text-align: center;
-}
-
-.awardclubblock {
-	height: 390px;
-	background-color:#FFFFFF;
-	font-size:36px;
-	text-align: center;
-}
-
-.contactblock {
-	height:75px;
-	background-color:#708090;
-	font-size:36px;
-	text-align: center;
-    width:100%;
-}
-
-/*Block CSS end*/
-
-/*Font Sizes start*/
-#body-text {
-  top: 0;
-  position: absolute;
-  bottom: 0;
-  left: 10%;
-  right: 10%;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center
-}
-
-.RokkittFont{
-	font-family: 'Rokkitt', serif;
-}
-
-hr {
-  width: 15%;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  border: 0;
-  border-top: 4px solid rgba(0, 0, 0, 0.1);
-}
-
-.educationFont{
-	font-size: 15px;
-}
-
-.descTextSize{
-	font-size: 25px;
-}
-
-.skillmargin{
-	margin-bottom: 10px
-}
-
-.headerFont{
-    font-family: 'Anton', sans-serif;
-}
-
-.center{
-    margin: auto;
-    width: 50%;
-}
-a {
-  color:inherit;
-}
-
-.contactIcon{
-    margin-top: 10px;
-    margin-left:10px;
-    margin-right: 10px;
-}
-.img-thumbnail{
-    background-color: #DCDCDC;
-}
-.contactIconCC{
-    margin-top:10px;
-    float:left;
-    margin-left: 10px;
-}
-.mobheader{
-    float:left;
-    width: 100%;
-}
-.full-width-div {
-    position: absolute;
-    width: 100%;
-    left: 0;
-}
-/*Font Size CSS end*/
-
-/*Project 1 Modal*/
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 99999;
-    padding-top: 100px;
-    width: 100%;
-    height: 100%;
-	overflow: auto;
-    background-color: rgba(0,0,0,1);
-}
-
-.modal-content {
-    height: 50%;
-    width: 50%;
-	margin: auto;
-	background-color: rgba(0,0,0,1);
-}
-
-.close {
-	background-color: black;
-	color: #FFF;
-	width: 15px;
-	height: 25px;
-}
-
-.close:hover,
-.close:focus {
-    color: rgba(0,0,0,1);
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.carousel-control-next-icon, .carousel-control-prev-icon {
-  margin-top: 200px;
-}
-
-.carousel-indicators{
-	bottom: -180px;
-}
-
-.projectDescFont{
-	color: #FFF;
-}
-
-.carousel-inner{
-  width:100%;
-  max-height: 700px !important;
-}
-
-.w-100{
-	max-height:500px !important;
-}
-/*Project 1 Modal end*/
-
-.topInfoDiv{
-	background-color: #FFFFFF;
-	height: 22rem;
-	margin: auto;
-	margin-top: 173px;
-}
-
-/*********************************************/
-/*Site Revamp
-/*********************************************/
-
-/*Font and Styleing*/
-.sendToBottom {
-    position: absolute;
-	bottom: 0;
-}
-
-.sendToLeftHeadshot{
-
-}
-
- .headShotMainDiv{
-	height: 65vh;
-}
-/*
-.piiSizingName{
-	font-size: 7.5vh;
-	margin-top: 55px;
-}
-
-.piiSizingInfo{
-	font-size: 1.5vh;
-}
-
-.piiInfoHeader{
-	font-weight: bold;
-	font-size: 2.5vh;
-}
-
-.piiBackground{
-	height: 470px;
-	width: 470px;
-	background-color: #DCDCDC;
-}
-
-.mainPiiDiv{
-	height: 470px;
-	width: 470px;
-	padding-left: 110px;
-}
-
-.headShotPic{
-	height: 470px;
-	width: 470px;
-}
-
-.fadeInEffect{
-	animation: fadein 4s;
-} */
-
-@keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
+/* Default & Bootstrap Override */
 .containerOveride{
 	max-width: 100%;
 	padding: 0px;
@@ -586,6 +17,37 @@ body {
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Rubik', sans-serif;
+}
+
+.carousel-inner{
+	max-height: 1200px !important;
+}
+/* End Bootstrap Override */
+
+/* Effecs */
+.fadeInEffect{
+	animation: fadein 7s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* End Effecs */
+
+.parallax {
+    /* The image used */
+    background-image: url("https://images.unsplash.com/photo-1449034446853-66c86144b0ad?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=7402cc297bdfbb4a4856e764971dc013&auto=format&fit=crop&w=1350&q=80");
+    /* Set a specific height */
+    /* Create the parallax scrolling effect */
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+	min-height: 100vh;
+}
+
+.skillmargin{
+	margin-bottom: 10px
 }
 /*End Font and Styling*/
 
