--- a/home.css
+++ b/home.css
@@ -20,7 +20,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .carousel-inner{
-	max-height: 1200px !important;
+	max-height: 800px !important;
 }
 /* End Bootstrap Override */
 
@@ -55,21 +55,56 @@ h1, h2, h3, h4, h5, h6 {
 }
 /* End Effecs */
 
-.parallax {
+.parallaxCover {
     /* The image used */
-    background-image: url("https://images.unsplash.com/photo-1449034446853-66c86144b0ad?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=7402cc297bdfbb4a4856e764971dc013&auto=format&fit=crop&w=1350&q=80");
+    background-image: url("https://images.unsplash.com/photo-1527187953783-56a6bde0ddf2?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=72575db1e9e2f85edeec2f33215a1fc8&auto=format&fit=crop&w=967&q=80");
     /* Set a specific height */
     /* Create the parallax scrolling effect */
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
-	min-height: 100vh;
+	min-height: 110vh;
+}
+
+.parallaxSkill {
+    /* The image used */
+    background-image: url("https://i.imgur.com/l2OOPFZ.jpg");
+    /* Set a specific height */
+    /* Create the parallax scrolling effect */
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+	min-height: 110vh;
+}
+
+.parallaxBottom {
+    /* The image used */
+    background-image: url("https://images.unsplash.com/photo-1509702713478-5441be3d911c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=68772eda63c07b218f50935b78067a04&auto=format&fit=crop&w=634&q=80");
+    /* Set a specific height */
+    /* Create the parallax scrolling effect */
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+	min-height: 200vh;
 }
 
 .skillmargin{
 	margin-bottom: 10px
 }
+
+.skillBarPercent{
+	margin-left: 2px;
+}
+
+.topper{
+	margin-top: 10vh;
+}
 /*End Font and Styling*/
+
+/*responsive media*/
+
+
+/*responsive media end*/
 
 /*********************************************/
 /*End Site Revamp
