--- a/home.css
+++ b/home.css
@@ -22,6 +22,8 @@ h1, h2, h3, h4, h5, h6 {
 .carousel-inner{
 	max-height: 800px !important;
 }
+
+
 /* End Bootstrap Override */
 
 /* Effecs */
@@ -68,9 +70,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .parallaxSkill {
     /* The image used */
-    background-image: url("https://i.imgur.com/l2OOPFZ.jpg");
+   /* background-image: url("https://i.imgur.com/l2OOPFZ.jpg");*/
     /* Set a specific height */
     /* Create the parallax scrolling effect */
+	background-color: #f2f2f2;
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
@@ -79,9 +82,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .parallaxBottom {
     /* The image used */
-    background-image: url("https://images.unsplash.com/photo-1509702713478-5441be3d911c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=68772eda63c07b218f50935b78067a04&auto=format&fit=crop&w=634&q=80");
+    /*background-image: url("https://images.unsplash.com/photo-1509702713478-5441be3d911c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=68772eda63c07b218f50935b78067a04&auto=format&fit=crop&w=634&q=80");*/
     /* Set a specific height */
     /* Create the parallax scrolling effect */
+	background-color: #ffff;
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
