added new section 2 bg pic

--- a/home.css
+++ b/home.css
@@ -99,10 +99,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .parallaxSkill {
     /* The image used */
-   /* background-image: url("https://i.imgur.com/l2OOPFZ.jpg");*/
+    background-image: url("https://images.unsplash.com/photo-1520531158340-44015069e78e?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=e8e1834e861a1f2eefcc8cc3622af6c9&auto=format&fit=crop&w=1438&q=80");
     /* Set a specific height */
     /* Create the parallax scrolling effect */
-	background-color: #f2f2f2;
+	#background-color: #f2f2f2;
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
